--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 accelerate==1.8.1
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
@@ -8,25 +9,31 @@ annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 asttokens==3.0.0
+astunparse==1.6.3
 async-timeout==4.0.3
 attrs==25.3.0
 backoff==2.2.1
 beautifulsoup4==4.13.4
 bitsandbytes==0.46.1
 blinker==1.9.0
+blis==1.3.0
 cachetools==5.5.2
+catalogue==2.0.10
 cbor==1.0.0
 certifi==2025.7.9
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.2
 click==8.2.1
+cloudpathlib==0.21.1
 colorama==0.4.6
 coloredlogs==15.0.1
+confection==0.1.5
 contourpy==1.3.2
 cryptography==45.0.5
 ctransformers==0.2.27
 cycler==0.12.1
+cymem==2.0.11
 dataclasses-json==0.6.7
 datasets==4.0.0
 decorator==5.2.1
@@ -38,6 +45,7 @@ et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 executing==2.2.0
 faiss-cpu==1.11.0
+fasttext-wheel==0.9.2
 filelock==3.18.0
 filetype==1.2.0
 FlagEmbedding==1.3.5
@@ -45,16 +53,24 @@ flatbuffers==25.2.10
 fonttools==4.58.5
 frozenlist==1.7.0
 fsspec==2025.3.0
+gast==0.4.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-api-core==2.25.1
 google-auth==2.40.3
+google-auth-oauthlib==1.0.0
 google-cloud-vision==3.10.2
+google-pasta==0.2.0
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
 grpcio==1.73.1
 grpcio-status==1.73.1
 h11==0.16.0
+h5py==3.14.0
+hanlp==2.1.1
+hanlp_common==0.0.23
+hanlp_downloader==0.0.25
+hanlp_trie==0.0.5
 html5lib==1.1
 httpcore==1.0.9
 httpx==0.28.1
@@ -74,37 +90,51 @@ jsonpickle==4.1.1
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+keras==2.13.1
 kiwisolver==1.4.8
 langchain==0.3.26
 langchain-community==0.3.27
 langchain-core==0.3.68
 langchain-huggingface==0.3.0
 langchain-text-splitters==0.3.8
+langcodes==3.5.0
 langdetect==1.0.9
 langsmith==0.4.4
+language_data==1.3.0
+libclang==18.1.1
+ltp==4.2.14
+ltp-core==0.1.4
+ltp-extension==0.1.13
 lxml==6.0.0
 lz4==4.4.4
+marisa-trie==1.2.1
 Markdown==3.8.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.6.3
 multiprocess==0.70.16
+murmurhash==1.0.13
 mypy_extensions==1.1.0
 narwhals==1.46.0
 neo4j==5.28.1
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==2.2.6
+numpy==1.26.4
+nvidia-ml-py==12.575.51
+oauthlib==3.3.1
 olefile==0.47
 omegaconf==2.3.0
 onnx==1.18.0
 onnxruntime==1.22.0
 opencv-python==4.12.0.88
 openpyxl==3.1.5
+opt_einsum==3.4.0
 orjson==3.10.18
 packaging==24.2
 pandas==2.3.1
@@ -112,19 +142,24 @@ parso==0.8.4
 pdf2image==1.17.0
 pdfminer.six==20250506
 peft==0.16.0
+Penman==1.2.1
+perin_parser==0.0.19
+phrasetree==0.0.9
 pi_heif==1.0.0
 pikepdf==9.9.0
 pillow==11.3.0
+preshed==3.0.10
 prompt_toolkit==3.0.51
 propcache==0.3.2
 proto-plus==1.26.1
-protobuf==6.31.1
+protobuf==4.25.8
 psutil==7.0.0
 pure_eval==0.2.3
 py-cpuinfo==9.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pybind11==3.0.0
 pycocotools==2.0.10
 pycparser==2.22
 pydantic==2.11.7
@@ -133,6 +168,7 @@ pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.2
 PyMuPDF==1.26.3
+pynvml==12.0.0
 pypandoc==1.15
 pyparsing==3.2.3
 pypdf==5.7.0
@@ -154,7 +190,9 @@ RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rich==14.0.0
 rpds-py==0.26.0
 rsa==4.9.1
 safetensors==0.5.3
@@ -162,19 +200,35 @@ scikit-learn==1.7.0
 scipy==1.15.3
 sentence-transformers==5.0.0
 sentencepiece==0.2.0
+shellingham==1.5.4
 six==1.17.0
+smart_open==7.3.0.post1
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+spacy_pkuseg==1.0.0
 SQLAlchemy==2.0.41
+srsly==2.5.1
 stack-data==0.6.3
 streamlit==1.46.1
 sympy==1.14.0
 tenacity==9.1.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.1
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.1
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+thinc==8.3.6
 threadpoolctl==3.6.0
 timm==1.0.17
 tokenizers==0.21.2
 toml==0.10.2
+toposort==1.5
 torch==2.7.1+cu128
 torchaudio==2.7.1+cu128
 torchvision==0.22.1
@@ -183,9 +237,10 @@ tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.53.1
 trec-car-tools==2.6
+typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.12.2
 tzdata==2025.2
 unlzw3==0.2.3
 unstructured==0.18.3
@@ -195,13 +250,17 @@ unstructured.pytesseract==0.3.15
 urllib3==2.5.0
 warc3-wet==0.2.5
 warc3-wet-clueweb09==0.2.5
+wasabi==1.1.3
 watchdog==6.0.0
 wcwidth==0.2.13
+weasel==0.4.1
 webencodings==0.5.1
+Werkzeug==3.1.3
 wrapt==1.17.2
 xlrd==2.0.2
 xlsxwriter==3.2.5
 xxhash==3.5.0
 yarl==1.20.1
+zh_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.8.0/zh_core_web_sm-3.8.0-py3-none-any.whl#sha256=7de3bd267176b9b2a8defb6997c1cd296da16c57b5e712f72ea44a51755421c8
 zlib-state==0.1.9
 zstandard==0.23.0
